HTML 100%, CSS loadding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1,
-  maximum-scale=5"
+      maximum-scale=5"
     />
 
     <link rel="icon" href="devchallenges.png" />
@@ -16,80 +16,178 @@
       href="https://devchallenges.io/"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./assets/styles/style.css">
 
     <title>Devchallenges</title>
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <main class="main">
+      <header class="header">
+        <h1 class="header-text">classic cheesecake recipe</h1>
+        <blockquote class="header-quote">
+          <span class="sixdots">
+            <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="1.5" cy="1.5" r="1.5" fill="#C4C4C4"/>
+              <circle cx="1.5" cy="6.5" r="1.5" fill="#C4C4C4"/>
+              <circle cx="6.5" cy="1.5" r="1.5" fill="#C4C4C4"/>
+              <circle cx="6.5" cy="6.5" r="1.5" fill="#C4C4C4"/>
+              <circle cx="11.5" cy="1.5" r="1.5" fill="#C4C4C4"/>
+              <circle cx="11.5" cy="6.5" r="1.5" fill="#C4C4C4"/>
+              </svg>
+          </span>
+          <p class="quote">
+            Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.
+          </p>
+        </blockquote>
+      </header>
+      <figure class="showcase">
+        <img src="./assets/img/photo1.png" alt="cheesecake delicacy">
+      </figure>
+      <section class="main-section">
+        <section class="yield">
+          <ul class="yield-list">
+            <li class="yield-item">
+              <span class="orange yield-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="orange"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z"/></svg>
+              </span>
+              <article class="yield-item-info">
+                <p class="yield-item-info-p uppercase">yields</p>
+                <p class="yield-item-info-p orange">12 servings</p>
+              </article>
+            </li>
+            <li class="yield-item">
+              <span class="yield-icon"></span>
+              <article class="yield-item-info">
+                <p class="yield-item-info-p uppercase">yields</p>
+                <p class="yield-item-info-p">45 minutes</p>
+              </article>
+            </li>
+            <li class="yield-item">
+              <span class="yield-icon"></span>
+              <article class="yield-item-info">
+                <p class="yield-item-info-p uppercase">yields</p>
+                <p class="yield-item-info-p">1 hour</p>
+              </article>
+            </li>
+            <li class="yield-item">
+              <span class="yield-icon"></span>
+              <article class="yield-item-info">
+                <p class="yield-item-info-p uppercase">yields</p>
+                <p class="yield-item-info-p">7,75 hours</p>
+              </article>
+            </li>
+          </ul>
+        </section>
 
+        <section class="ingredients">
+          <h2>Ingredients</h2>
+          <article class="graham">
+            <p class="ingredients-text">Graham cracker crust</p>
+            <div class="graham-ingredients-list">
+              <label class="graham-item">
+                <input type="checkbox" name="check" class="check">
+                1 and 1/2 cups (150g) <strong>graham cracker crumbs</strong> (about 10 full sheet graham crackers)
+              </label>
+              <label class="graham-item">
+                <input type="checkbox" name="check" class="check">
+                5 Tablespoons (70g) <strong>unsalted butter</strong>, melted
+              </label>
+              <label class="graham-item">
+                <input type="checkbox" name="check" class="check">
+                1/4 cup (50g) <strong>granulated sugar</strong>
+              </label>
+            </div>
+          </article>
+
+          <article class="cheesecake">
+            <p class="ingredients-text">Cheesecake</p>
+            <div class="cheesecake-ingredients-list">
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                four 8-ounce blocks (904g) full-fat <strong>cream cheese</strong>, softened to room temperature
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                1 cup (200g) <strong>granulated sugar</strong>
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                1 cup (240g) full-fat <strong>sour cream</strong>, at room temperature
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                1 teaspoon <strong>pure vanilla extract</strong>
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                2 teaspoons <strong>fresh lemon juice</strong> (optional, but recommended)
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                3 large <strong>eggs</strong>, at room temperature
+              </label>
+              <label class="cheesecake-item">
+                <input type="checkbox" name="check" class="check">
+                topping suggestions: <em><span class="bold">salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</span></em> (recipe in notes)
+              </label>
+            </div>
+          </article>
+        </section>
+
+        <section class="instructions">
+          <article class="instruction">
+            <span class="bg-orange">1</span>
+            <p>
+              Adjust the oven rack to the lower-middle position and preheat oven to 350&deg;F (177&deg;C)
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">2</span>
+            <p>
+              <strong>Make the crust:</strong> Using a food processor, pulse the graham crackers into crumbs. Pour into a medium bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath step 4. Allow crust to slightly cool as you prepare the filling.
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">3</span>
+            <p>
+              <strong>Make the filling:</strong> Using a handheld or stand mixer fitted with a paddle attachment, beat the cream cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs one at a time, beating after each addition until just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you can.
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">4</span>
+            <p>
+              <strong>Prepare the simple water bath (see note)</strong> Boil a pot of water. You need 1 inch of water in your roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up, wrap the aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot water in. Whichever is easier for you.)
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">5</span>
+            <p>
+              Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">6</span>
+            <p>
+              Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water between each slice.
+            </p>
+          </article>
+          <article class="instruction">
+            <span class="bg-orange">7</span>
+            <p>
+              Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.
+            </p>
+          </article>
+        </section>
+      </section>
+      <blockquote class="source">
+        Source: https://sallysbakingaddiction.com/classic-cheesecake/ 
+      </blockquote>
+      <footer class="footer">
         <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
+          created by <a href="#">DoIfeanyichukwu</a> - <a href="#">devChallenges.io</a>
         </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+      </footer>
+    </main>
   </body>
 </html>
