updated the readme.md file

--- a/index.html
+++ b/index.html
@@ -47,35 +47,49 @@
       <section class="main-section">
         <section class="yield">
           <ul class="yield-list">
-            <li class="yield-item">
-              <span class="orange yield-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="orange"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z"/></svg>
-              </span>
-              <article class="yield-item-info">
-                <p class="yield-item-info-p uppercase">yields</p>
-                <p class="yield-item-info-p orange">12 servings</p>
-              </article>
+            <li class="yield-item yield-item-one">
+              <div class="yield-container">
+                <span class="orange yield-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="orange"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z"/></svg>
+                </span>
+                <article class="yield-item-info">
+                  <p class="yield-item-info-p sm uppercase">yields</p>
+                  <p class="yield-item-info-p bg orange">12 servings</p>
+                </article>
+              </div>
             </li>
             <li class="yield-item">
-              <span class="yield-icon"></span>
-              <article class="yield-item-info">
-                <p class="yield-item-info-p uppercase">yields</p>
-                <p class="yield-item-info-p">45 minutes</p>
-              </article>
+              <div class="yield-container">
+                <span class="yield-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#4f4f4f"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+                </span>
+                <article class="yield-item-info">
+                  <p class="yield-item-info-p sm uppercase">yields</p>
+                  <p class="yield-item-info-p bg">45 minutes</p>
+                </article>
+              </div>
             </li>
             <li class="yield-item">
-              <span class="yield-icon"></span>
-              <article class="yield-item-info">
-                <p class="yield-item-info-p uppercase">yields</p>
-                <p class="yield-item-info-p">1 hour</p>
-              </article>
+              <div class="yield-container">
+                <span class="yield-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#4f4f4f"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+                </span>
+                <article class="yield-item-info">
+                  <p class="yield-item-info-p sm  uppercase">yields</p>
+                  <p class="yield-item-info-p bg">1 hour</p>
+                </article>
+              </div>
             </li>
             <li class="yield-item">
-              <span class="yield-icon"></span>
-              <article class="yield-item-info">
-                <p class="yield-item-info-p uppercase">yields</p>
-                <p class="yield-item-info-p">7,75 hours</p>
-              </article>
+              <div class="yield-container">
+                <span class="yield-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#4f4f4f"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+                </span>
+                <article class="yield-item-info">
+                  <p class="yield-item-info-p  sm  uppercase">yields</p>
+                  <p class="yield-item-info-p bg">7,75 hours</p>
+                </article>
+              </div>
             </li>
           </ul>
         </section>
@@ -83,59 +97,98 @@
         <section class="ingredients">
           <h2>Ingredients</h2>
           <article class="graham">
-            <p class="ingredients-text">Graham cracker crust</p>
-            <div class="graham-ingredients-list">
-              <label class="graham-item">
-                <input type="checkbox" name="check" class="check">
-                1 and 1/2 cups (150g) <strong>graham cracker crumbs</strong> (about 10 full sheet graham crackers)
-              </label>
-              <label class="graham-item">
-                <input type="checkbox" name="check" class="check">
-                5 Tablespoons (70g) <strong>unsalted butter</strong>, melted
-              </label>
-              <label class="graham-item">
-                <input type="checkbox" name="check" class="check">
-                1/4 cup (50g) <strong>granulated sugar</strong>
-              </label>
-            </div>
+            <h3 class="ingredients-text">Graham cracker crust</h3>
+            <ul class="ingredients-list">
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>1 and 1/2 cups (150g) <strong>graham cracker crumbs</strong> (about 10 full sheet graham crackers)</span>
+                </label>
+              </li>
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>5 Tablespoons (70g) <strong>unsalted butter</strong>, melted</span>
+                </label>
+              </li>
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>1/4 cup (50g) <strong>granulated sugar</strong></span>
+                </label>
+              </li>
+            </ul>
           </article>
 
           <article class="cheesecake">
-            <p class="ingredients-text">Cheesecake</p>
-            <div class="cheesecake-ingredients-list">
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                four 8-ounce blocks (904g) full-fat <strong>cream cheese</strong>, softened to room temperature
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                1 cup (200g) <strong>granulated sugar</strong>
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                1 cup (240g) full-fat <strong>sour cream</strong>, at room temperature
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                1 teaspoon <strong>pure vanilla extract</strong>
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                2 teaspoons <strong>fresh lemon juice</strong> (optional, but recommended)
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                3 large <strong>eggs</strong>, at room temperature
-              </label>
-              <label class="cheesecake-item">
-                <input type="checkbox" name="check" class="check">
-                topping suggestions: <em><span class="bold">salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</span></em> (recipe in notes)
-              </label>
-            </div>
+            <h3 class="ingredients-text">Cheesecake</h3>
+            <ul class="ingredients-list">
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>four 8-ounce blocks (904g) full-fat <strong>cream cheese</strong>, softened to room temperature</span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>1 cup (200g) <strong>granulated sugar</strong></span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>1 cup (240g) full-fat <strong>sour cream</strong>, at room temperature</span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>1 teaspoon <strong>pure vanilla extract</strong></span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>2 teaspoons <strong>fresh lemon juice</strong> (optional, but recommended)</span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>3 large <strong>eggs</strong>, at room temperature</span>
+                </label>
+              </li>
+
+              <li class="ingredients-list-item">
+                <label class="ingredients-item-label">
+                  <input type="checkbox" name="check" class="check">
+
+                  <span>topping suggestions: <em><span class="bold">salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</span></em> (recipe in notes)</span>
+                </label>
+              </li>
+            </ul>
           </article>
         </section>
 
         <section class="instructions">
+          <h2 class="instructions-main-text">
+            Instructions
+          </h2>
           <article class="instruction">
             <span class="bg-orange">1</span>
             <p>
@@ -180,14 +233,17 @@
           </article>
         </section>
       </section>
+
       <blockquote class="source">
         Source: https://sallysbakingaddiction.com/classic-cheesecake/ 
       </blockquote>
+
       <footer class="footer">
         <p>
-          created by <a href="#">DoIfeanyichukwu</a> - <a href="#">devChallenges.io</a>
+          created by <a rel="noopener" href="https://devchallenges.io/portfolio/DoIfeanyichukwu">DoIfeanyichukwu</a> - <a rel="noopener" href="https://devchallenges.io">devChallenges.io</a>
         </p>
       </footer>
     </main>
   </body>
 </html>
+
